--- a/src/components/MonthlyChartComponent/MonthlyChartComponent.css
+++ b/src/components/MonthlyChartComponent/MonthlyChartComponent.css
@@ -51,7 +51,7 @@
 .month-total {
   font-size: 16px;
   font-weight: 700;
-  color: #65328f;
+  color: #000;
   margin-top: 4px;
   text-align: center;
 }
@@ -64,7 +64,7 @@
   transform: translate(-50%, -50%);
   font-size: 16px;
   font-weight: bold;
-  color: #65328f;
+  color: #000;
   pointer-events: none; /* Allow clicks to pass through */
   z-index: 10;
   font-family: "Inter", sans-serif;
